--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" href="favicon.png">
   <title>
-    Bee Sender-ERC20 Token Multi Sender.Packer your multi transfer in one transaction and save your cost.
+   Token Multi Sender.Packer your multi transfer in one transaction and save your cost.
   </title>
 
  <!-- Bootstrap CSS -->
